<resources>
    <string name="app_name">stage</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint">搜索或输入位置</string>
    <string name="add_tab">打开新标签页</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_holder">HolderActivity</string>
    <string name="dia_bookmark_radio">添加到首页</string>
    <string name="dia_bookmark_url">地址：</string>
    <string name="dia_bookmark_title">名称：</string>
    <string name="dia_add_bookmark_title">添加书签</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="searching">搜索</string>
    <string name="common">常规</string>
    <string name="extensions">附加组件</string>
    <string name="advanced">高级</string>
    <string name="AutomaticFontSize">自适应字体大小</string>
    <string name="ForceUserScalable">强制手势缩放</string>
    <string name="private_safety">隐私&amp;安全</string>
    <string name="https_only">Https-Only</string>
    <string name="Cookie">减少Cookie横幅</string>
    <string name="tracking_protecting">增强型跟踪保护</string>
    <string name="web_permission">网站权限</string>
    <string name="about">关于</string>
    <string name="about_stage">关于stage</string>
    <!-- webextension permission-->
    <string name="per_tabs">tabs</string>
    <string name="per_bookmarks">bookmarks</string>
    <string name="per_browserSettings">browserSettings</string>
    <string name="per_browsingData">browsingData</string>
    <string name="per_downloads">downloads</string>
    <string name="per_downloadsopen">downloads.open</string>
    <string name="per_find">find</string>
    <string name="per_geolocation">geolocation</string>
    <string name="per_history">history</string>
    <string name="per_management">management</string>
    <string name="per_nativeMessaging">nativeMessaging</string>
    <string name="per_notifications">notifications</string>
    <string name="per_pkcs11">pkcs11</string>
    <string name="per_privacy">privacy</string>
    <string name="per_proxy">proxy</string>
    <string name="per_sessions">sessions</string>
    <string name="per_topSites">topSites</string>
    <string name="per_webNavigation">webNavigation</string>
    <string name="per_clipboardWrite">clipboardWrite</string>
    <string name="per_clipboardRead">clipboardRead</string>
    <string name="per_bookmarks_cn">读取或修改书签</string>
    <string name="per_browserSettings_cn">读取或修改浏览器设置</string>
    <string name="per_browsingData_cn">清除最近的浏览历史、cookie 和相关数据</string>
    <string name="per_downloads_cn">下载文件和读取并修改浏览器的下载记录</string>
    <string name="per_downloadsopen_cn">打开下载到本地的文件</string>
    <string name="per_find_cn">读取所有打开标签的内容</string>
    <string name="per_geolocation_cn">获取您的地理位置</string>
    <string name="per_history_cn">获取浏览历史</string>
    <string name="per_management_cn">监控扩展使用和管理主题</string>
    <string name="per_nativeMessaging_cn">与 Firefox 以外的程序交换消息</string>
    <string name="per_notifications_cn">显示通知</string>
    <string name="per_pkcs11_cn">提供密码认证服务</string>
    <string name="per_privacy_cn">读取和修改隐私设置</string>
    <string name="per_proxy_cn">控制浏览器代理设置</string>
    <string name="per_sessions_cn">访问最近关闭的标签</string>
    <string name="per_tabs_cn">访问浏览器选项卡</string>
    <string name="per_topSites_cn">访问浏览历史</string>
    <string name="per_webNavigation_cn">在使用时访问浏览器活动</string>
    <string name="per_clipboardWrite_cn">向剪贴板写入数据</string>
    <string name="per_clipboardRead_cn">从剪贴板获取数据</string>
    <string name="settins">设置</string>
    <string name="download">下载</string>
    <string name="addons">附加组件</string>
    <string name="baidu">https://www.baidu.com/s?wd=</string>
    <string name="google">https://www.google.com/search?q=</string>
    <string name="bing">https://www.bing.com/search?q=</string>
    <string name="sogou">https://www.sogou.com/web?query=</string>
    <string name="diySearching">自定义搜索引擎</string>
    <string name="diyAddress">自定义搜索地址</string>
    <string name="edit_diy_warnning">请务必输入正确</string>
    <string name="addons_menu_add">从addons.mozilla.org获取附加组件</string>
    <string name="author">作者:</string>
    <string name="version">版本:</string>
    <string name="description">描述:</string>
    <string name="pair_instructions_message">识别二维码</string>
    <string name="intent_message">网页希望打开本地应用</string>
    <string name="details">详情</string>

</resources>