<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph2"
    app:startDestination="@id/downloadFragment">
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.thallo.stage.settings.SettingsFragment"
        android:label="@string/settins" >
        <action
            android:id="@+id/action_settingsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_settingsFragment_to_settingsSearching2"
            app:destination="@id/settingsSearching2"
            app:enterAnim="@android:anim/slide_out_right"
            app:exitAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_settingsFragment_to_addonsManagerFragment"
            app:destination="@id/addonsManagerFragment"
            app:enterAnim="@android:anim/slide_out_right"
            app:exitAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/downloadFragment"
        android:name="com.thallo.stage.download.DownloadFragment"
        android:label="@string/download" />
    <fragment
        android:id="@+id/addonsManagerFragment"
        android:name="com.thallo.stage.addonsManagerFragment"
        android:label="@string/addons"
        tools:layout="@layout/fragment_addons_manager" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.thallo.stage.AboutFragment"
        android:label=" "
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/settingsSearching2"
        android:name="com.thallo.stage.settings.SettingsSearching"
        android:label="@string/searching" />
</navigation>